Make sure setMode works for all flavors Fix Tabs and BottomNavigation dark mode when they are root Up the version

--- a/src/scss/_controls.scss
+++ b/src/scss/_controls.scss
@@ -45,12 +45,7 @@
                 '.nt-tab-view')
     );
 
-    @include tab-skin(
-                ('BottomNavigation',
-                '.nt-bottom-navigation',
-                'Tabs',
-                '.nt-tabs')
-    );
+    @include tabs-skin();
 
     @include list-view-skin(
                 ('ListView',
